load("@io_bazel_rules_sass//:defs.bzl", "sass_library")
load("//ts:compile_sass.bzl", "compile_sass")

sass_library(
    name = "base_lib",
    srcs = [
        "base.scss",
        "bootstrap-dark.scss",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "vars_lib",
        "//sass/bootstrap",
    ],
)

sass_library(
    name = "vars_lib",
    srcs = [
        "_colors.scss",
        "_functions.scss",
        "_vars.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "buttons_lib",
    srcs = [
        "buttons.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "card_counts_lib",
    srcs = [
        "card-counts.scss",
    ],
    visibility = ["//visibility:public"],
)

# minimal definitions used by AnkiMobile's editor - should be safe to remove
# once AnkiMobile switches to the new editor code in the future
sass_library(
    name = "core_lib",
    srcs = [
        "_vars.scss",
        "core.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "scrollbar_lib",
    srcs = [
        "scrollbar.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "panes_lib",
    srcs = [
        "panes.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "breakpoints_lib",
    srcs = [
        "breakpoints.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "button_mixins_lib",
    srcs = [
        "_button-mixins.scss",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "vars_lib",
    ],
)

sass_library(
    name = "night_mode_lib",
    srcs = [
        "night-mode.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "elevation_lib",
    srcs = [
        "elevation.scss",
    ],
    visibility = ["//visibility:public"],
)

compile_sass(
    srcs = ["_vars.scss"],
    group = "vars_css",
    visibility = ["//visibility:public"],
)
