load("//ts:prettier.bzl", "prettier", "prettier_test")
load("//ts:sql_format.bzl", "sql_format_setup")

prettier()

prettier_test(
    name = "format_check",
    srcs = glob([
        "*.ts",
        "*.js",
    ]),
)

sql_format_setup()

# Exported files
#################

exports_files([
    "tsconfig.json",
    "d3_missing.d.ts",
    ".prettierrc",
    "rollup.config.js",
    ".eslintrc.js",
    "licenses.json",
    "sql_format.ts",
])

alias(
    name = "yarn",
    actual = "@nodejs//:yarn",
)
