load("//ts:prettier.bzl", "prettier", "prettier_test")
load("//ts:sql_format.bzl", "sql_format_setup")

prettier()

prettier_test(
    name = "format_check",
    srcs = glob([
        "*.ts",
        "*.js",
    ]),
)

sql_format_setup()

# Exported files
#################

exports_files([
    "tsconfig.json",
    ".prettierrc",
    ".eslintrc.js",
    "licenses.json",
    "sql_format.ts",
    "protobuf-shim.js",
    "jest.config.js",
    "package.json",
])

alias(
    name = "yarn",
    actual = "@nodejs//:yarn",
)
