load("//ts:prettier.bzl", "prettier", "prettier_test")
load("//ts:sql_format.bzl", "sql_format_setup")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

prettier()

prettier_test(
    name = "format_check",
    srcs = glob([
        "*.ts",
        "*.js",
    ]),
)

sql_format_setup()

ts_library(
    name = "image_module_support",
    srcs = ["images.d.ts"],
    visibility = ["//visibility:public"],
)

# Exported files
#################

exports_files([
    "tsconfig.json",
    ".prettierrc",
    ".eslintrc.js",
    "licenses.json",
    "sql_format.ts",
    "jest.config.js",
    "package.json",
    "protobuf-no-long.js",
])

alias(
    name = "yarn",
    actual = "@nodejs//:yarn",
)
