[package]
name = "rsdroid"
version = "0.1.0"
authors = ["David Allison <davidallisongithub@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anki = { path = "../anki/rslib", features = ["rustls"] }
anki_proto = { path = "../anki/rslib/proto" }

android_logger = "0.15.1"
gag = "1.0.0"
jni = { version = "0.21.1", default-features = false }
log = "0.4.27"
once_cell = "1.21.1"
prost = "0.13"
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug", "log"] }

[build-dependencies]
anki_io = { version = "0.0.0", path = "../anki/rslib/io" }
anki_process = { version = "0.0.0", path = "../anki/rslib/process" }
anki_proto_gen = { version = "0.0.0", path = "../anki/rslib/proto_gen" }
anki_i18n = { version = "0.0.0", path = "../anki/rslib/i18n" }

anyhow = "1.0.97"
glob = "0.3.2"
inflections = "1.1.1"
prost-reflect = "0.14.7"
prost-types = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
