[package]
name = "rsbridge"
version = "0.0.0"
authors = ["Ankitects Pty Ltd and contributors <https://help.ankiweb.net>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Anki's Rust library code Python bindings"

[dependencies]
anki = { path = "../../rslib" }

# /cargo/update.py needs to be run if updating the version below
[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module", "abi3", "abi3-py39"]

[lib]
name = "rsbridge"
crate-type = ["cdylib"]
path = "lib.rs"
