load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@py_deps//:requirements.bzl", "requirement")

py_binary(
    name = "mypy_protobuf",
    srcs = [requirement("mypy-protobuf").replace(":pkg", ":mypy_protobuf.py")],
    visibility = [
        "//visibility:public",
    ],
    deps = [requirement("mypy-protobuf")],
)

py_binary(
    name = "protoc_wrapper",
    srcs = ["protoc_wrapper.py"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":mypy_protobuf",
        "@rules_python//python/runfiles",
    ],
)

py_library(
    name = "hookslib",
    srcs = ["hookslib.py"],
    imports = ["."],
    visibility = [
        "//pylib:__subpackages__",
        "//qt:__pkg__",
    ],
)

py_binary(
    name = "genhooks",
    srcs = [
        "genhooks.py",
        "hookslib.py",
    ],
    imports = ["."],
    visibility = ["//pylib:__subpackages__"],
    deps = [
        requirement("black"),
        requirement("stringcase"),
    ],
)

filegroup(
    name = "py_source_files",
    srcs = glob(["*.py"]),
    visibility = ["//pylib:__subpackages__"],
)
