[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anki-audio"
dynamic = ["version"]
description = "Audio binaries (mpv, lame) for Anki"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
authors = [
  { name = "Anki Team" },
]
urls = { Homepage = "https://github.com/ankitects/anki" }

[tool.hatch.build.targets.wheel]
packages = ["anki_audio"]
artifacts = ["anki_audio/*"]

[tool.hatch.build.targets.wheel.macos]
macos-max-compat = false

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.version]
source = "code"
path = "./version.py"
