[package]
name = "launcher"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anki_io.workspace = true
anki_process.workspace = true
anyhow.workspace = true
camino.workspace = true
dirs.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
widestring.workspace = true
libc.workspace = true
libc-stdhandle.workspace = true

[[bin]]
name = "build_win"
path = "src/bin/build_win.rs"

[[bin]]
name = "anki-console"
path = "src/bin/anki_console.rs"

[target.'cfg(windows)'.build-dependencies]
embed-resource.workspace = true
